Home-Screen ; Category Layouts ; Adapters

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:theme="@style/Theme.CadernoDeReceitas">
         <activity
             android:name=".SplashActivity"
+            android:screenOrientation="locked"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +25,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+        <activity android:name=".HomeActivity"
+            android:screenOrientation="locked"/>
+
+
     </application>
 
 </manifest>
