--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,9 +18,9 @@ android {
 //            resolutionStrategy { force 'androidx.core:core:1.6.0' }
 //        }
 
-        configurations.all {
-            resolutionStrategy { force 'androidx.core:core-ktx:1.6.0' }
-        }
+//        configurations.all {
+//            resolutionStrategy { force 'androidx.core:core-ktx:1.6.0' }
+//        }
 
 
         applicationId "com.study.cadernodereceitas"
